--- a/index.html
+++ b/index.html
@@ -31,4 +31,6 @@
   <img src="images/adam.jpg" alt="Avi">
   <img src="images/spencer.jpg" alt="Spencer" target="_blank">
 
+</body>
 </html>
+</head>
