--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
   <img src="images/adam.jpg" alt="Avi">
   <img src="images/spencer.jpg" alt="Spencer" target="_blank">
 
-</html>
-</head>
+</ul>
+</body>
